# hpb

./: .gitignore  CMakeLists.txt  README.md
benchmarks/: benchmark.cc  compare.py  descriptor.proto  descriptor_sv.proto  empty.proto  gen_synthetic_protos.py  gen_upb_binary_c.py
docs/: design.md  style-guide.md  vs-cpp-protos.md  wrapping-hpb.md
google/: CMakeLists.txt
google/protobuf/: descriptor.hpb.c  descriptor.hpb.h
hpb/: CMakeLists.txt  generated_code_support.h  hpb.hpp  hpb_so.c
hpb/base/: descriptor_constants.h  status.c  status.h  status.hpp  string_view.h
hpb/collections/: array.c  array.h  array_split64.h  array_test.cc  map.c  map.h  map_gencode_util.h  map_sorter.c  map_test.cc  message_value.h
hpb/conformance/: conformance_upb.c
hpb/hash/: common.c  common.h  int_table.h  str_table.h  test.cc
hpb/io/: chunked_input_stream.c  chunked_input_stream.h  chunked_output_stream.c  chunked_output_stream.h  string.h  string_test.cc  tokenizer.c  tokenizer.h  tokenizer_test.cc  zero_copy_input_stream.h  zero_copy_output_stream.h  zero_copy_stream_test.cc
hpb/json/: decode.c  decode.h  decode_test.cc  encode.c  encode.h  encode_test.cc  test.proto
hpb/lex/: atoi.c  atoi.h  atoi_test.cc  round_trip.c  round_trip.h  strtod.c  strtod.h  unicode.c  unicode.h
hpb/mem/: alloc.c  alloc.h  arena.c  arena.h  arena.hpp  arena_test.cc
hpb/message/: accessors.c  accessors.h  accessors_split64.h  accessors_test.cc  copy.c  copy.h  copy_test.cc  message.c  message.h  promote.c  promote.h  promote_test.cc  tagged_ptr.h  test.cc  test.proto  types.h
hpb/mini_descriptor/: build_enum.c  build_enum.h  decode.c  decode.h  link.c  link.h
hpb/mini_table/: compat.c  compat.h  enum.h  extension.h  extension_registry.c  extension_registry.h  field.h  file.h  message.c  message.h  sub.h
hpb/port/: atomic.h  def.inc  undef.inc  vsnprintf_compat.h
hpb/reflection/: common.h  def.h  def.hpp  def_builder.c  def_builder_test.cc  def_pool.c  def_pool.h  def_type.c  def_type.h  desc_state.c  enum_def.c  enum_def.h  enum_reserved_range.c  enum_reserved_range.h  enum_value_def.c  enum_value_def.h  extension_range.c  extension_range.h  field_def.c  field_def.h  file_def.c  file_def.h  message.c  message.h  message.hpp  message_def.c  message_def.h  message_reserved_range.c  message_reserved_range.h  method_def.c  method_def.h  oneof_def.c  oneof_def.h  service_def.c  service_def.h
hpb/test/: empty.proto  fuzz_util.cc  fuzz_util.h  parse_text_proto.h  proto3_test.cc  proto3_test.proto  test_cpp.cc  test_generated_code.cc  test_import_empty_srcs.cc  (+2 more)
hpb/text/: encode.c  (+1 more)
hpbc/: CMakeLists.txt  c_hpb.cc  c_hpb.h  code_generator_request.c  code_generator_request.h  code_generator_request.proto  common.cc  common.h  file_layout.cc  file_layout.h  get_used_fields.c  get_used_fields.h  hpbc_so.c  hpbdev.c  hpbdev.h  hs_hpb.cc  hs_hpb.h  hsc_hpb.cc  hsc_hpb.h  keywords.cc  keywords.h  names.cc  names.h  plugin.h  protoc-gen-hpb.cc  protoc-gen-hpb_back.cc  protoc-gen-hpbb.cc  protoc-gen-hpbdefs.cc  protoc-gen-hs.cc  protoc-gen-upbdev.cc  subprocess.cc  subprocess.h
protos/: protos.cc  protos.h  protos_extension_lock.cc  protos_extension_lock.h  protos_extension_lock_test.cc  protos_internal.h  protos_internal_test.cc  repeated_field.h  repeated_field_iterator.h  repeated_field_iterator_test.cc
protos_generator/: gen_accessors.cc  gen_messages.cc  gen_repeated_fields.cc  gen_repeated_fields.h  names.cc  output.cc  output.h  protoc-gen-upb-protos.cc
python/: convert.c  convert.h  descriptor.c  descriptor.h  descriptor_containers.c  descriptor_containers.h  descriptor_pool.c  descriptor_pool.h  extension_dict.c  map.c  map.h  message.c  message.h  protobuf.c  protobuf.h  repeated.c  repeated.h  unknown_fields.c
test/: dict  dict.hs  enum.hs  foo.proto  list  list.hs
(+70 files in other folders)
